[gd_scene load_steps=17 format=2]

[ext_resource path="res://assets/fonts/windows_command_prompt.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://src/environment/tileset.tres" type="TileSet" id=2]
[ext_resource path="res://src/environment/main/main.gd" type="Script" id=3]
[ext_resource path="res://src/environment/ParallaxBackground.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/sfx/powerdown02.wav" type="AudioStream" id=5]
[ext_resource path="res://assets/environment/tileset_simple.png" type="Texture" id=6]
[ext_resource path="res://src/entities/items/weapons/range/shotgun/Shotgun.tscn" type="PackedScene" id=7]
[ext_resource path="res://src/entities/items/weapons/range/assault rifle/AssaultRifle.tscn" type="PackedScene" id=8]
[ext_resource path="res://src/components/spawners/enemy/EnemySpawner.tscn" type="PackedScene" id=11]
[ext_resource path="res://src/entities/items/medkit/Medkit.tscn" type="PackedScene" id=12]
[ext_resource path="res://src/entities/players/sooltan/sooltan.tscn" type="PackedScene" id=13]

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( 96, 96, 0, 96, 0, 0, 96, 0 )

[sub_resource type="TileSet" id=2]
0/name = "tileset_simple.png 0"
0/texture = ExtResource( 6 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 32, 96, 96 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 1 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0

[sub_resource type="DynamicFont" id=3]
resource_local_to_scene = true
size = 64
font_data = ExtResource( 1 )

[sub_resource type="Animation" id=4]
length = 5.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("InfoPos:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -400 ), Vector2( 0, -350 ) ]
}

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("InfoPos:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -400 ) ]
}

[node name="Main" type="Node2D"]
script = ExtResource( 3 )
__meta__ = {
"_edit_horizontal_guides_": [ 1285.0, 409.0 ],
"_edit_vertical_guides_": [ -780.0, 0.481323, 39.5946 ]
}

[node name="ParallaxBackground" parent="." instance=ExtResource( 4 )]

[node name="Arena" type="Node2D" parent="."]

[node name="CliffSideTileMap" type="TileMap" parent="Arena"]
tile_set = SubResource( 2 )
cell_size = Vector2( 96, 96 )
format = 1
tile_data = PoolIntArray( 131061, 0, 0, 131062, 0, 0, 131063, 0, 0, 131064, 0, 0, 131065, 0, 0, 131066, 0, 0, 65541, 0, 0, 65542, 0, 0, 65543, 0, 0, 65544, 0, 0, 65545, 0, 0, 65546, 0, 0, 196603, 0, 0, 131076, 0, 0, 262140, 0, 0, 262141, 0, 0, 262142, 0, 0, 262143, 0, 0, 196608, 0, 0, 196609, 0, 0, 196610, 0, 0, 196611, 0, 0 )

[node name="TileMap" type="TileMap" parent="Arena"]
tile_set = ExtResource( 2 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( -524301, 5, 0, -524300, 5, 0, -524299, 5, 0, -524298, 5, 0, -524297, 5, 0, -524296, 5, 0, -524295, 5, 0, -524294, 5, 0, -524293, 5, 0, -524292, 5, 0, -524291, 5, 0, -524290, 5, 0, -524289, 5, 0, -589824, 5, 0, -589823, 5, 0, -589822, 5, 0, -589821, 5, 0, -589820, 5, 0, -589819, 5, 0, -589818, 5, 0, -589817, 5, 0, -589816, 5, 0, -589815, 5, 0, -589814, 5, 0, -589813, 5, 0, -589812, 5, 0, -458765, 5, 0, -458764, 4, 0, -458763, 4, 1, -458762, 4, 1, -458761, 4, 1, -458760, 4, 1, -458759, 4, 1, -458758, 4, 1, -458757, 4, 1, -458756, 4, 1, -458755, 4, 1, -458754, 4, 1, -458753, 4, 0, -524288, 4, 0, -524287, 4, 1, -524286, 4, 1, -524285, 4, 0, -524284, 4, 0, -524283, 4, 0, -524282, 4, 1, -524281, 4, 1, -524280, 4, 1, -524279, 4, 1, -524278, 4, 1, -524277, 4, 1, -524276, 5, 0, -393232, 5, 0, -393231, 5, 0, -393230, 5, 0, -393229, 5, 0, -393228, 4, 1, -393227, 4, 1, -393226, 4, 1, -393225, 4, 1, -393224, 4, 1, -393223, 4, 1, -393222, 4, 1, -393221, 4, 0, -393220, 4, 0, -393219, 4, 1, -393218, 4, 1, -393217, 4, 1, -458752, 4, 0, -458751, 4, 1, -458750, 4, 1, -458749, 4, 0, -458748, 4, 1, -458747, 4, 0, -458746, 4, 0, -458745, 4, 1, -458744, 4, 1, -458743, 4, 0, -458742, 4, 1, -458741, 4, 1, -458740, 5, 0, -458739, 5, 0, -458738, 5, 0, -458737, 5, 0, -327696, 5, 0, -327695, 4, 1, -327694, 4, 0, -327693, 4, 1, -327692, 4, 1, -327691, 4, 1, -327690, 4, 0, -327689, 4, 1, -327688, 4, 1, -327687, 4, 1, -327686, 4, 1, -327685, 4, 1, -327684, 4, 0, -327683, 4, 1, -327682, 4, 0, -327681, 4, 1, -393216, 4, 1, -393215, 4, 1, -393214, 4, 0, -393213, 4, 0, -393212, 4, 1, -393211, 4, 1, -393210, 4, 1, -393209, 4, 0, -393208, 4, 0, -393207, 4, 1, -393206, 4, 1, -393205, 4, 1, -393204, 4, 1, -393203, 4, 1, -393202, 4, 1, -393201, 5, 0, -262160, 5, 0, -262159, 4, 1, -262158, 4, 1, -262157, 4, 1, -262156, 4, 1, -262155, 4, 1, -262154, 4, 1, -262153, 4, 1, -262152, 4, 1, -262151, 4, 1, -262150, 4, 0, -262149, 4, 0, -262148, 4, 1, -262147, 4, 0, -262146, 4, 1, -262145, 4, 1, -327680, 4, 1, -327679, 4, 0, -327678, 4, 1, -327677, 4, 1, -327676, 4, 1, -327675, 4, 1, -327674, 4, 0, -327673, 4, 1, -327672, 4, 1, -327671, 4, 1, -327670, 4, 1, -327669, 4, 1, -327668, 4, 0, -327667, 4, 1, -327666, 4, 1, -327665, 5, 0, -196642, 5, 0, -196641, 5, 0, -196640, 5, 0, -196639, 5, 0, -196638, 5, 0, -196637, 5, 0, -196636, 5, 0, -196635, 5, 0, -196634, 5, 0, -196633, 5, 0, -196632, 5, 0, -196631, 5, 0, -196630, 5, 0, -196629, 5, 0, -196628, 5, 0, -196627, 5, 0, -196626, 5, 0, -196625, 5, 0, -196624, 5, 0, -196623, 4, 1, -196622, 4, 1, -196621, 4, 1, -196620, 4, 1, -196619, 4, 1, -196618, 4, 1, -196617, 4, 1, -196616, 4, 1, -196615, 4, 1, -196614, 4, 0, -196613, 4, 1, -196612, 4, 0, -196611, 4, 0, -196610, 4, 1, -196609, 4, 1, -262144, 4, 0, -262143, 4, 0, -262142, 4, 1, -262141, 4, 1, -262140, 4, 1, -262139, 4, 1, -262138, 4, 1, -262137, 4, 1, -262136, 4, 1, -262135, 4, 1, -262134, 4, 1, -262133, 4, 1, -262132, 4, 1, -262131, 4, 1, -262130, 4, 1, -262129, 5, 0, -262128, 5, 0, -262127, 5, 0, -262126, 5, 0, -262125, 5, 0, -262124, 5, 0, -262123, 5, 0, -262122, 5, 0, -262121, 5, 0, -262120, 5, 0, -262119, 5, 0, -262118, 5, 0, -262117, 5, 0, -262116, 5, 0, -262115, 5, 0, -262114, 5, 0, -262113, 5, 0, -262112, 5, 0, -131106, 5, 0, -131105, 4, 1, -131104, 4, 1, -131103, 4, 1, -131102, 4, 1, -131101, 4, 1, -131100, 4, 1, -131099, 4, 1, -131098, 4, 1, -131097, 4, 0, -131096, 4, 1, -131095, 4, 1, -131094, 4, 1, -131093, 4, 0, -131092, 4, 1, -131091, 4, 1, -131090, 4, 1, -131089, 4, 1, -131088, 4, 0, -131087, 4, 0, -131086, 4, 1, -131085, 4, 1, -131084, 4, 1, -131083, 4, 0, -131082, 4, 1, -131081, 4, 1, -131080, 4, 1, -131079, 4, 1, -131078, 4, 1, -131077, 4, 1, -131076, 4, 1, -131075, 4, 1, -131074, 4, 0, -131073, 4, 1, -196608, 4, 1, -196607, 4, 1, -196606, 4, 1, -196605, 4, 1, -196604, 4, 0, -196603, 4, 1, -196602, 4, 1, -196601, 4, 1, -196600, 4, 1, -196599, 4, 1, -196598, 4, 0, -196597, 4, 1, -196596, 4, 0, -196595, 4, 1, -196594, 4, 1, -196593, 4, 1, -196592, 4, 1, -196591, 4, 1, -196590, 4, 1, -196589, 4, 0, -196588, 4, 1, -196587, 4, 1, -196586, 4, 0, -196585, 4, 1, -196584, 4, 1, -196583, 4, 1, -196582, 4, 0, -196581, 4, 1, -196580, 4, 1, -196579, 4, 1, -196578, 4, 1, -196577, 4, 1, -196576, 4, 1, -65570, 5, 0, -65569, 4, 1, -65568, 4, 1, -65567, 4, 1, -65566, 4, 1, -65565, 4, 1, -65564, 4, 0, -65563, 4, 1, -65562, 4, 0, -65561, 4, 1, -65560, 4, 0, -65559, 4, 0, -65558, 4, 0, -65557, 4, 1, -65556, 4, 0, -65555, 4, 1, -65554, 4, 1, -65553, 4, 0, -65552, 4, 1, -65551, 4, 1, -65550, 4, 1, -65549, 4, 1, -65548, 4, 1, -65547, 4, 0, -65546, 4, 1, -65545, 4, 0, -65544, 4, 0, -65543, 4, 1, -65542, 4, 1, -65541, 4, 1, -65540, 4, 1, -65539, 4, 1, -65538, 4, 1, -65537, 4, 0, -131072, 4, 0, -131071, 4, 1, -131070, 4, 1, -131069, 4, 1, -131068, 4, 1, -131067, 4, 1, -131066, 4, 1, -131065, 4, 1, -131064, 4, 0, -131063, 4, 1, -131062, 4, 1, -131061, 4, 0, -131060, 4, 1, -131059, 4, 0, -131058, 4, 1, -131057, 4, 1, -131056, 4, 1, -131055, 4, 1, -131054, 4, 1, -131053, 4, 1, -131052, 4, 1, -131051, 4, 1, -131050, 4, 0, -131049, 4, 1, -131048, 4, 1, -131047, 4, 1, -131046, 4, 1, -131045, 4, 1, -131044, 4, 1, -131043, 4, 1, -131042, 4, 1, -131041, 4, 1, -131040, 4, 1, -34, 5, 0, -33, 4, 1, -32, 4, 0, -31, 4, 1, -30, 4, 0, -29, 4, 1, -28, 4, 1, -27, 4, 1, -26, 4, 1, -25, 4, 1, -24, 4, 1, -23, 4, 0, -22, 4, 1, -21, 4, 1, -20, 4, 1, -19, 4, 1, -18, 4, 1, -17, 4, 0, -16, 4, 1, -15, 4, 1, -14, 4, 1, -13, 4, 1, -12, 4, 1, -11, 4, 1, -10, 4, 1, -9, 4, 1, -8, 4, 0, -7, 4, 1, -6, 4, 1, -5, 4, 1, -4, 4, 1, -3, 4, 1, -2, 4, 1, -1, 4, 1, -65536, 4, 0, -65535, 4, 1, -65534, 4, 1, -65533, 4, 0, -65532, 4, 1, -65531, 4, 1, -65530, 4, 1, -65529, 4, 0, -65528, 4, 0, -65527, 4, 1, -65526, 4, 1, -65525, 4, 1, -65524, 4, 1, -65523, 4, 1, -65522, 4, 1, -65521, 4, 1, -65520, 4, 1, -65519, 4, 1, -65518, 4, 0, -65517, 4, 1, -65516, 4, 0, -65515, 4, 1, -65514, 4, 1, -65513, 4, 0, -65512, 4, 1, -65511, 4, 0, -65510, 4, 1, -65509, 4, 1, -65508, 4, 1, -65507, 4, 0, -65506, 4, 1, -65505, 4, 1, -65504, 4, 0, 65502, 5, 0, 65503, 4, 1, 65504, 4, 1, 65505, 4, 1, 65506, 4, 0, 65507, 4, 1, 65508, 4, 0, 65509, 4, 1, 65510, 4, 0, 65511, 4, 0, 65512, 4, 0, 65513, 4, 1, 65514, 4, 1, 65515, 4, 1, 65516, 4, 0, 65517, 4, 1, 65518, 4, 1, 65519, 4, 1, 65520, 4, 1, 65521, 4, 1, 65522, 4, 1, 65523, 4, 1, 65524, 4, 0, 65525, 4, 1, 65526, 4, 1, 65527, 4, 1, 65528, 4, 1, 65529, 4, 1, 65530, 4, 1, 65531, 4, 1, 65532, 4, 1, 65533, 4, 1, 65534, 4, 1, 65535, 4, 1, 0, 4, 1, 1, 4, 1, 2, 4, 1, 3, 4, 1, 4, 4, 0, 5, 4, 1, 6, 4, 1, 7, 4, 1, 8, 4, 0, 9, 4, 1, 10, 4, 1, 11, 4, 0, 12, 4, 0, 13, 4, 0, 14, 4, 1, 15, 4, 1, 16, 4, 0, 17, 4, 1, 18, 4, 1, 19, 4, 1, 20, 4, 1, 21, 4, 1, 22, 4, 1, 23, 4, 1, 24, 4, 1, 25, 4, 1, 26, 4, 1, 27, 4, 1, 28, 4, 1, 29, 4, 1, 30, 4, 1, 31, 4, 1, 32, 4, 1, 131038, 5, 0, 131039, 4, 0, 131040, 4, 1, 131041, 4, 1, 131042, 4, 1, 131043, 4, 0, 131044, 4, 1, 131045, 4, 1, 131046, 4, 1, 131047, 4, 1, 131048, 4, 1, 131049, 4, 1, 131050, 4, 1, 131051, 4, 0, 131052, 4, 1, 131053, 4, 1, 131054, 4, 1, 131055, 4, 1, 131056, 4, 1, 131057, 4, 1, 131058, 4, 1, 131059, 4, 1, 131060, 4, 1, 131061, 4, 0, 131062, 4, 1, 131063, 4, 1, 131064, 4, 1, 131065, 4, 1, 131066, 4, 1, 131067, 4, 1, 131068, 4, 0, 131069, 4, 0, 131070, 4, 1, 131071, 4, 1, 65536, 4, 1, 65537, 4, 1, 65538, 4, 1, 65539, 4, 1, 65540, 4, 1, 65541, 4, 1, 65542, 4, 1, 65543, 4, 1, 65544, 4, 0, 65545, 4, 1, 65546, 4, 0, 65547, 4, 1, 65548, 4, 1, 65549, 4, 1, 65550, 4, 0, 65551, 4, 1, 65552, 4, 0, 65553, 4, 1, 65554, 4, 1, 65555, 4, 0, 65556, 4, 1, 65557, 4, 1, 65558, 4, 1, 65559, 4, 0, 65560, 4, 1, 65561, 4, 1, 65562, 4, 0, 65563, 4, 1, 65564, 4, 1, 65565, 4, 1, 65566, 4, 1, 65567, 4, 1, 65568, 4, 0, 196574, 5, 0, 196575, 4, 1, 196576, 4, 1, 196577, 4, 1, 196578, 4, 1, 196579, 4, 1, 196580, 4, 1, 196581, 4, 0, 196582, 4, 1, 196583, 4, 1, 196584, 4, 1, 196585, 4, 1, 196586, 4, 1, 196587, 4, 1, 196588, 4, 1, 196589, 4, 0, 196590, 4, 1, 196591, 4, 1, 196592, 4, 0, 196593, 4, 1, 196594, 4, 1, 196595, 4, 1, 196596, 4, 1, 196597, 4, 1, 196598, 4, 1, 196599, 4, 1, 196600, 4, 1, 196601, 4, 1, 196602, 4, 1, 196603, 4, 1, 196604, 4, 1, 196605, 4, 1, 196606, 4, 1, 196607, 4, 0, 131072, 4, 1, 131073, 4, 1, 131074, 4, 1, 131075, 4, 1, 131076, 4, 1, 131077, 4, 1, 131078, 4, 1, 131079, 4, 1, 131080, 4, 1, 131081, 4, 0, 131082, 4, 0, 131083, 4, 1, 131084, 4, 0, 131085, 4, 1, 131086, 4, 1, 131087, 4, 1, 131088, 4, 1, 131089, 4, 1, 131090, 4, 0, 131091, 4, 1, 131092, 4, 1, 131093, 4, 1, 131094, 4, 1, 131095, 4, 1, 131096, 4, 1, 131097, 4, 0, 131098, 4, 1, 131099, 4, 1, 131100, 4, 1, 131101, 4, 1, 131102, 4, 1, 131103, 4, 0, 131104, 4, 0, 262110, 5, 0, 262129, 4, 1, 262130, 4, 1, 262131, 4, 1, 262132, 4, 1, 262133, 4, 1, 262134, 4, 1, 262135, 4, 1, 262136, 4, 0, 262137, 4, 1, 262138, 4, 0, 262139, 4, 0, 262140, 4, 1, 262141, 4, 1, 262142, 4, 1, 262143, 4, 1, 196608, 4, 1, 196609, 4, 1, 196610, 4, 1, 196611, 4, 0, 196612, 4, 1, 196613, 4, 1, 196614, 4, 1, 196615, 4, 1, 196616, 4, 1, 196617, 4, 1, 196618, 4, 1, 196619, 4, 1, 196620, 4, 1, 196621, 4, 1, 196622, 4, 1, 327665, 4, 1, 327666, 4, 1, 327667, 4, 1, 327668, 4, 1, 327669, 4, 1, 327670, 4, 1, 327671, 4, 1, 327672, 4, 0, 327673, 4, 1, 327674, 4, 0, 327675, 4, 1, 327676, 4, 1, 327677, 4, 0, 327678, 4, 0, 327679, 4, 1, 262144, 4, 0, 262145, 4, 1, 262146, 4, 1, 262147, 4, 1, 262148, 4, 1, 262149, 4, 1, 262150, 4, 1, 262151, 4, 1, 262152, 4, 1, 262153, 4, 1, 262154, 4, 1, 262155, 4, 1, 262156, 4, 0, 262157, 4, 1, 262158, 4, 1, 393201, 4, 1, 393202, 4, 1, 393203, 4, 1, 393204, 4, 1, 393205, 4, 1, 393206, 4, 0, 393207, 4, 1, 393208, 4, 1, 393209, 4, 0, 393210, 4, 0, 393211, 4, 1, 393212, 4, 1, 393213, 4, 1, 393214, 4, 0, 393215, 4, 1, 327680, 4, 0, 327681, 4, 1, 327682, 4, 1, 327683, 4, 1, 327684, 4, 1, 327685, 4, 0, 327686, 4, 1, 327687, 4, 1, 327688, 4, 0, 327689, 4, 1, 327690, 4, 1, 327691, 4, 1, 327692, 4, 1, 327693, 4, 1, 327694, 4, 1, 458719, 6, 0, 458720, 6, 0, 458721, 6, 0, 458722, 6, 0, 458723, 6, 0, 458724, 6, 0, 458725, 6, 0, 458726, 6, 0, 458727, 6, 0, 458728, 6, 0, 458729, 6, 0, 458730, 6, 0, 458731, 6, 0, 458732, 6, 0, 458733, 6, 0, 458734, 6, 0, 458735, 6, 0, 458736, 6, 0, 458740, 4, 0, 458741, 4, 1, 458742, 4, 0, 458743, 4, 0, 458744, 4, 1, 458745, 4, 0, 458746, 4, 1, 458747, 4, 0, 458748, 4, 1, 458749, 4, 1, 458750, 4, 1, 458751, 4, 1, 393216, 4, 1, 393217, 4, 0, 393218, 4, 1, 393219, 4, 1, 393220, 4, 1, 393221, 4, 0, 393222, 4, 1, 393223, 4, 1, 393224, 4, 1, 393225, 4, 1, 393226, 4, 0, 393227, 4, 1, 393231, 6, 0, 393232, 6, 0, 393233, 6, 0, 393234, 6, 0, 393235, 6, 0, 393236, 6, 0, 393237, 6, 0, 393238, 6, 0, 393239, 6, 0, 393240, 6, 0, 393241, 6, 0, 393242, 6, 0, 393243, 6, 0, 393244, 6, 0, 393245, 6, 0, 393246, 6, 0, 393247, 6, 0, 393248, 6, 0, 524255, 6, 0, 524256, 6, 0, 524257, 6, 0, 524258, 6, 0, 524259, 6, 0, 524260, 6, 0, 524261, 6, 0, 524262, 6, 0, 524263, 6, 0, 524264, 6, 0, 524265, 6, 0, 524266, 6, 0, 524267, 6, 0, 524268, 6, 0, 524269, 6, 0, 524270, 6, 0, 524271, 6, 0, 524272, 6, 0, 524276, 4, 1, 524277, 4, 1, 524278, 4, 1, 524279, 4, 0, 524280, 4, 1, 524281, 4, 1, 524282, 4, 1, 524283, 4, 1, 524284, 4, 1, 524285, 4, 1, 524286, 4, 1, 524287, 4, 1, 458752, 4, 1, 458753, 4, 0, 458754, 4, 1, 458755, 4, 1, 458756, 4, 1, 458757, 4, 1, 458758, 4, 1, 458759, 4, 1, 458760, 4, 1, 458761, 4, 1, 458762, 4, 0, 458763, 4, 1, 458764, 7, 0, 458765, 7, 0, 458767, 6, 0, 458768, 6, 0, 458769, 6, 0, 458770, 6, 0, 458771, 6, 0, 458772, 6, 0, 458773, 6, 0, 458774, 6, 0, 458775, 6, 0, 458776, 6, 0, 458777, 6, 0, 458778, 6, 0, 458779, 6, 0, 458780, 6, 0, 458781, 6, 0, 458782, 6, 0, 458783, 6, 0, 458784, 6, 0, 589791, 6, 0, 589792, 6, 0, 589793, 6, 0, 589794, 6, 0, 589795, 6, 0, 589796, 6, 0, 589797, 6, 0, 589798, 6, 0, 589799, 6, 0, 589800, 6, 0, 589801, 6, 0, 589802, 6, 0, 589803, 6, 0, 589804, 6, 0, 589805, 6, 0, 589806, 6, 0, 589807, 6, 0, 589808, 6, 0, 589812, 4, 1, 589813, 4, 1, 589814, 4, 0, 589815, 4, 1, 589816, 4, 1, 589817, 4, 1, 589818, 4, 1, 589819, 4, 0, 589820, 4, 1, 589821, 4, 1, 589822, 4, 1, 589823, 4, 1, 524288, 4, 1, 524289, 4, 1, 524290, 4, 1, 524291, 4, 1, 524292, 4, 1, 524293, 4, 0, 524294, 4, 1, 524295, 4, 1, 524296, 4, 1, 524297, 4, 1, 524298, 4, 1, 524299, 4, 1, 524303, 6, 0, 524304, 6, 0, 524305, 6, 0, 524306, 6, 0, 524307, 6, 0, 524308, 6, 0, 524309, 6, 0, 524310, 6, 0, 524311, 6, 0, 524312, 6, 0, 524313, 6, 0, 524314, 6, 0, 524315, 6, 0, 524316, 6, 0, 524317, 6, 0, 524318, 6, 0, 524319, 6, 0, 524320, 6, 0, 655327, 6, 0, 655328, 6, 0, 655329, 6, 0, 655330, 6, 0, 655331, 6, 0, 655332, 6, 0, 655333, 6, 0, 655334, 6, 0, 655335, 6, 0, 655336, 6, 0, 655337, 6, 0, 655338, 6, 0, 655339, 6, 0, 655340, 6, 0, 655341, 6, 0, 655342, 6, 0, 655343, 6, 0, 655344, 6, 0, 655345, 6, 0, 655346, 6, 0, 655347, 6, 0, 589836, 6, 0, 589837, 6, 0, 589838, 6, 0, 589839, 6, 0, 589840, 6, 0, 589841, 6, 0, 589842, 6, 0, 589843, 6, 0, 589844, 6, 0, 589845, 6, 0, 589846, 6, 0, 589847, 6, 0, 589848, 6, 0, 589849, 6, 0, 589850, 6, 0, 589851, 6, 0, 589852, 6, 0, 589853, 6, 0, 589854, 6, 0, 589855, 6, 0, 589856, 6, 0, 720863, 6, 0, 720864, 6, 0, 720865, 6, 0, 720866, 6, 0, 720867, 6, 0, 720868, 6, 0, 720869, 6, 0, 720870, 6, 0, 720871, 6, 0, 720872, 6, 0, 720873, 6, 0, 720874, 6, 0, 720875, 6, 0, 720876, 6, 0, 720877, 6, 0, 720878, 6, 0, 720879, 6, 0, 720880, 6, 0, 720881, 6, 0, 720882, 6, 0, 720883, 6, 0, 655372, 6, 0, 655373, 6, 0, 655374, 6, 0, 655375, 6, 0, 655376, 6, 0, 655377, 6, 0, 655378, 6, 0, 655379, 6, 0, 655380, 6, 0, 655381, 6, 0, 655382, 6, 0, 655383, 6, 0, 655384, 6, 0, 655385, 6, 0, 655386, 6, 0, 655387, 6, 0, 655388, 6, 0, 655389, 6, 0, 655390, 6, 0, 655391, 6, 0, 655392, 6, 0, 786399, 6, 0, 786400, 6, 0, 786401, 6, 0, 786402, 6, 0, 786403, 6, 0, 786404, 6, 0, 786405, 6, 0, 786406, 6, 0, 786407, 6, 0, 786408, 6, 0, 786409, 6, 0, 786410, 6, 0, 786411, 6, 0, 786412, 6, 0, 786413, 6, 0, 786414, 6, 0, 786415, 6, 0, 786416, 6, 0, 786417, 6, 0, 786418, 6, 0, 786419, 6, 0, 720908, 6, 0, 720909, 6, 0, 720910, 6, 0, 720911, 6, 0, 720912, 6, 0, 720913, 6, 0, 720914, 6, 0, 720915, 6, 0, 720916, 6, 0, 720917, 6, 0, 720918, 6, 0, 720919, 6, 0, 720920, 6, 0, 720921, 6, 0, 720922, 6, 0, 720923, 6, 0, 720924, 6, 0, 720925, 6, 0, 720926, 6, 0, 720927, 6, 0, 720928, 6, 0, 851935, 6, 0, 851936, 6, 0, 851937, 6, 0, 851938, 6, 0, 851939, 6, 0, 851940, 6, 0, 851941, 6, 0, 851942, 6, 0, 851943, 6, 0, 851944, 6, 0, 851945, 6, 0, 851946, 6, 0, 851947, 6, 0, 851948, 6, 0, 851949, 6, 0, 851950, 6, 0, 851951, 6, 0, 851952, 6, 0, 851953, 6, 0, 851954, 6, 0, 851955, 6, 0, 851956, 6, 0, 851957, 6, 0, 851958, 6, 0, 851959, 6, 0, 851960, 6, 0, 851961, 6, 0, 851962, 6, 0, 851963, 6, 0, 851964, 6, 0, 851965, 6, 0, 851966, 6, 0, 851967, 6, 0, 786432, 6, 0, 786433, 6, 0, 786434, 6, 0, 786435, 6, 0, 786436, 6, 0, 786437, 6, 0, 786438, 6, 0, 786439, 6, 0, 786440, 6, 0, 786441, 6, 0, 786442, 6, 0, 786443, 6, 0, 786444, 6, 0, 786445, 6, 0, 786446, 6, 0, 786447, 6, 0, 786448, 6, 0, 786449, 6, 0, 786450, 6, 0, 786451, 6, 0, 786452, 6, 0, 786453, 6, 0, 786454, 6, 0, 786455, 6, 0, 786456, 6, 0, 786457, 6, 0, 786458, 6, 0, 786459, 6, 0, 786460, 6, 0, 786461, 6, 0, 786462, 6, 0, 786463, 6, 0, 786464, 6, 0, 917471, 6, 0, 917472, 6, 0, 917473, 6, 0, 917474, 6, 0, 917475, 6, 0, 917476, 6, 0, 917477, 6, 0, 917478, 6, 0, 917479, 6, 0, 917480, 6, 0, 917481, 6, 0, 917482, 6, 0, 917483, 6, 0, 917484, 6, 0, 917485, 6, 0, 917486, 6, 0, 917487, 6, 0, 917488, 6, 0, 917489, 6, 0, 917490, 6, 0, 917491, 6, 0, 917492, 6, 0, 917493, 6, 0, 917494, 6, 0, 917495, 6, 0, 917496, 6, 0, 917497, 6, 0, 917498, 6, 0, 917499, 6, 0, 917500, 6, 0, 917501, 6, 0, 917502, 6, 0, 917503, 6, 0, 851968, 6, 0, 851969, 6, 0, 851970, 6, 0, 851971, 6, 0, 851972, 6, 0, 851973, 6, 0, 851974, 6, 0, 851975, 6, 0, 851976, 6, 0, 851977, 6, 0, 851978, 6, 0, 851979, 6, 0, 851980, 6, 0, 851981, 6, 0, 851982, 6, 0, 851983, 6, 0, 851984, 6, 0, 851985, 6, 0, 851986, 6, 0, 851987, 6, 0, 851988, 6, 0, 851989, 6, 0, 851990, 6, 0, 851991, 6, 0, 851992, 6, 0, 851993, 6, 0, 851994, 6, 0, 851995, 6, 0, 851996, 6, 0, 851997, 6, 0, 851998, 6, 0, 851999, 6, 0, 852000, 6, 0, 983007, 6, 0, 983008, 6, 0, 983009, 6, 0, 983010, 6, 0, 983011, 6, 0, 983012, 6, 0, 983013, 6, 0, 983014, 6, 0, 983015, 6, 0, 983016, 6, 0, 983017, 6, 0, 983018, 6, 0, 983019, 6, 0, 983020, 6, 0, 983021, 6, 0, 983022, 6, 0, 983023, 6, 0, 983024, 6, 0, 983025, 6, 0, 983026, 6, 0, 983027, 6, 0, 983028, 6, 0, 983029, 6, 0, 983030, 6, 0, 983031, 6, 0, 983032, 6, 0, 983033, 6, 0, 983034, 6, 0, 983035, 6, 0, 983036, 6, 0, 983037, 6, 0, 983038, 6, 0, 983039, 6, 0, 917504, 6, 0, 917505, 6, 0, 917506, 6, 0, 917507, 6, 0, 917508, 6, 0, 917509, 6, 0, 917510, 6, 0, 917511, 6, 0, 917512, 6, 0, 917513, 6, 0, 917514, 6, 0, 917515, 6, 0, 917516, 6, 0, 917517, 6, 0, 917518, 6, 0, 917519, 6, 0, 917520, 6, 0, 917521, 6, 0, 917522, 6, 0, 917523, 6, 0, 917524, 6, 0, 917525, 6, 0, 917526, 6, 0, 917527, 6, 0, 917528, 6, 0, 917529, 6, 0, 917530, 6, 0, 917531, 6, 0, 917532, 6, 0, 917533, 6, 0, 917534, 6, 0, 917535, 6, 0, 917536, 6, 0, 1048543, 6, 0, 1048544, 6, 0, 1048545, 6, 0, 1048546, 6, 0, 1048547, 6, 0, 1048548, 6, 0, 1048549, 6, 0, 1048550, 6, 0, 1048551, 6, 0, 1048552, 6, 0, 1048553, 6, 0, 1048554, 6, 0, 1048555, 6, 0, 1048556, 6, 0, 1048557, 6, 0, 1048558, 6, 0, 1048559, 6, 0, 1048560, 6, 0, 1048561, 6, 0, 1048562, 6, 0, 1048563, 6, 0, 1048564, 6, 0, 1048565, 6, 0, 1048566, 6, 0, 1048567, 6, 0, 1048568, 6, 0, 1048569, 6, 0, 1048570, 6, 0, 1048571, 6, 0, 1048572, 6, 0, 1048573, 6, 0, 1048574, 6, 0, 1048575, 6, 0, 983040, 6, 0, 983041, 6, 0, 983042, 6, 0, 983043, 6, 0, 983044, 6, 0, 983045, 6, 0, 983046, 6, 0, 983047, 6, 0, 983048, 6, 0, 983049, 6, 0, 983050, 6, 0, 983051, 6, 0, 983052, 6, 0, 983053, 6, 0, 983054, 6, 0, 983055, 6, 0, 983056, 6, 0, 983057, 6, 0, 983058, 6, 0, 983059, 6, 0, 983060, 6, 0, 983061, 6, 0, 983062, 6, 0, 983063, 6, 0, 983064, 6, 0, 983065, 6, 0, 983066, 6, 0, 983067, 6, 0, 983068, 6, 0, 983069, 6, 0, 983070, 6, 0, 983071, 6, 0, 983072, 6, 0, 1114079, 6, 0, 1114080, 6, 0, 1114081, 6, 0, 1114082, 6, 0, 1114083, 6, 0, 1114084, 6, 0, 1114085, 6, 0, 1114086, 6, 0, 1114087, 6, 0, 1114088, 6, 0, 1114089, 6, 0, 1114090, 6, 0, 1114091, 6, 0, 1114092, 6, 0, 1114093, 6, 0, 1114094, 6, 0, 1114095, 6, 0, 1114096, 6, 0, 1114097, 6, 0, 1114098, 6, 0, 1114099, 6, 0, 1114100, 6, 0, 1114101, 6, 0, 1114102, 6, 0, 1114103, 6, 0, 1114104, 6, 0, 1114105, 6, 0, 1114106, 6, 0, 1114107, 6, 0, 1114108, 6, 0, 1114109, 6, 0, 1114110, 6, 0, 1114111, 6, 0, 1048576, 6, 0, 1048577, 6, 0, 1048578, 6, 0, 1048579, 6, 0, 1048580, 6, 0, 1048581, 6, 0, 1048582, 6, 0, 1048583, 6, 0, 1048584, 6, 0, 1048585, 6, 0, 1048586, 6, 0, 1048587, 6, 0, 1048588, 6, 0, 1048589, 6, 0, 1048590, 6, 0, 1048591, 6, 0, 1048592, 6, 0, 1048593, 6, 0, 1048594, 6, 0, 1048595, 6, 0, 1048596, 6, 0, 1048597, 6, 0, 1048598, 6, 0, 1048599, 6, 0, 1048600, 6, 0, 1048601, 6, 0, 1048602, 6, 0, 1048603, 6, 0, 1048604, 6, 0, 1048605, 6, 0, 1048606, 6, 0, 1048607, 6, 0, 1048608, 6, 0, 1179615, 6, 0, 1179616, 6, 0, 1179617, 6, 0, 1179618, 6, 0, 1179619, 6, 0, 1179620, 6, 0, 1179621, 6, 0, 1179622, 6, 0, 1179623, 6, 0, 1179624, 6, 0, 1179625, 6, 0, 1179626, 6, 0, 1179627, 6, 0, 1179628, 6, 0, 1179629, 6, 0, 1179630, 6, 0, 1179631, 6, 0, 1179632, 6, 0, 1179633, 6, 0, 1179634, 6, 0, 1179635, 6, 0, 1179636, 6, 0, 1179637, 6, 0, 1179638, 6, 0, 1179639, 6, 0, 1179640, 6, 0, 1179641, 6, 0, 1179642, 6, 0, 1179643, 6, 0, 1179644, 6, 0, 1179645, 6, 0, 1179646, 6, 0, 1179647, 6, 0, 1114112, 6, 0, 1114113, 6, 0, 1114114, 6, 0, 1114115, 6, 0, 1114116, 6, 0, 1114117, 6, 0, 1114118, 6, 0, 1114119, 6, 0, 1114120, 6, 0, 1114121, 6, 0, 1114122, 6, 0, 1114123, 6, 0, 1114124, 6, 0, 1114125, 6, 0, 1114126, 6, 0, 1114127, 6, 0, 1114128, 6, 0, 1114129, 6, 0, 1114130, 6, 0, 1114131, 6, 0, 1114132, 6, 0, 1114133, 6, 0, 1114134, 6, 0, 1114135, 6, 0, 1114136, 6, 0, 1114137, 6, 0, 1114138, 6, 0, 1114139, 6, 0, 1114140, 6, 0, 1114141, 6, 0, 1114142, 6, 0, 1114143, 6, 0, 1114144, 6, 0, 1245151, 6, 0, 1245152, 6, 0, 1245153, 6, 0, 1245154, 6, 0, 1245155, 6, 0, 1245156, 6, 0, 1245157, 6, 0, 1245158, 6, 0, 1245159, 6, 0, 1245160, 6, 0, 1245161, 6, 0, 1245162, 6, 0, 1245163, 6, 0, 1245164, 6, 0, 1245165, 6, 0, 1245166, 6, 0, 1245167, 6, 0, 1245168, 6, 0, 1245169, 6, 0, 1245170, 6, 0, 1245171, 6, 0, 1245172, 6, 0, 1245173, 6, 0, 1245174, 6, 0, 1245175, 6, 0, 1245176, 6, 0, 1245177, 6, 0, 1245178, 6, 0, 1245179, 6, 0, 1245180, 6, 0, 1245181, 6, 0, 1245182, 6, 0, 1245183, 6, 0, 1179648, 6, 0, 1179649, 6, 0, 1179650, 6, 0, 1179651, 6, 0, 1179652, 6, 0, 1179653, 6, 0, 1179654, 6, 0, 1179655, 6, 0, 1179656, 6, 0, 1179657, 6, 0, 1179658, 6, 0, 1179659, 6, 0, 1179660, 6, 0, 1179661, 6, 0, 1179662, 6, 0, 1179663, 6, 0, 1179664, 6, 0, 1179665, 6, 0, 1179666, 6, 0, 1179667, 6, 0, 1179668, 6, 0, 1179669, 6, 0, 1179670, 6, 0, 1179671, 6, 0, 1179672, 6, 0, 1179673, 6, 0, 1179674, 6, 0, 1179675, 6, 0, 1179676, 6, 0, 1179677, 6, 0, 1179678, 6, 0, 1179679, 6, 0, 1179680, 6, 0, 1310687, 6, 0, 1310688, 6, 0, 1310689, 6, 0, 1310690, 6, 0, 1310691, 6, 0, 1310692, 6, 0, 1310693, 6, 0, 1310694, 6, 0, 1310695, 6, 0, 1310696, 6, 0, 1310697, 6, 0, 1310698, 6, 0, 1310699, 6, 0, 1310700, 6, 0, 1310701, 6, 0, 1310702, 6, 0, 1310703, 6, 0, 1310704, 6, 0, 1310705, 6, 0, 1310706, 6, 0, 1310707, 6, 0, 1310708, 6, 0, 1310709, 6, 0, 1310710, 6, 0, 1310711, 6, 0, 1310712, 6, 0, 1310713, 6, 0, 1310714, 6, 0, 1310715, 6, 0, 1310716, 6, 0, 1310717, 6, 0, 1310718, 6, 0, 1310719, 6, 0, 1245184, 6, 0, 1245185, 6, 0, 1245186, 6, 0, 1245187, 6, 0, 1245188, 6, 0, 1245189, 6, 0, 1245190, 6, 0, 1245191, 6, 0, 1245192, 6, 0, 1245193, 6, 0, 1245194, 6, 0, 1245195, 6, 0, 1245196, 6, 0, 1245197, 6, 0, 1245198, 6, 0, 1245199, 6, 0, 1245200, 6, 0, 1245201, 6, 0, 1245202, 6, 0, 1245203, 6, 0, 1245204, 6, 0, 1245205, 6, 0, 1245206, 6, 0, 1245207, 6, 0, 1245208, 6, 0, 1245209, 6, 0, 1245210, 6, 0, 1245211, 6, 0, 1245212, 6, 0, 1245213, 6, 0, 1245214, 6, 0, 1245215, 6, 0, 1245216, 6, 0 )

[node name="Spawners" type="Node2D" parent="Arena"]
visible = false

[node name="EnemySpawner" parent="Arena/Spawners" instance=ExtResource( 11 )]
position = Vector2( 776, 0 )

[node name="EnemySpawner3" parent="Arena/Spawners" instance=ExtResource( 11 )]
position = Vector2( -776, 0 )

[node name="YSort" type="YSort" parent="Arena"]

[node name="Sooltan" parent="Arena/YSort" instance=ExtResource( 13 )]
position = Vector2( 100, 0 )

[node name="Sooltan2" parent="Arena/YSort" instance=ExtResource( 13 )]
position = Vector2( -100, 0 )
player_id = "_2"

[node name="Items" type="Node2D" parent="Arena/YSort"]

[node name="Medkit" parent="Arena/YSort/Items" instance=ExtResource( 12 )]

[node name="Shotgun" parent="Arena/YSort/Items" instance=ExtResource( 7 )]
position = Vector2( 88, 112 )

[node name="AssaultRifle" parent="Arena/YSort/Items" instance=ExtResource( 8 )]

[node name="OneWayCollision" type="StaticBody2D" parent="Arena" groups=["wall"]]
position = Vector2( 0, 40 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionPolygon2D5" type="CollisionPolygon2D" parent="Arena/OneWayCollision"]
position = Vector2( 520, 32 )
rotation = -1.5708
polygon = PoolVector2Array( 169, -39.9994, 169, -23.9994, -22.9999, -24.0001, -22.9999, -40.0001 )
one_way_collision = true

[node name="CollisionPolygon2D6" type="CollisionPolygon2D" parent="Arena/OneWayCollision"]
position = Vector2( -520, -112 )
rotation = 1.5708
polygon = PoolVector2Array( 169, -39.9994, 169, -23.9994, -22.9999, -24.0001, -22.9999, -40.0001 )
one_way_collision = true

[node name="InfoPos" type="Position2D" parent="."]
position = Vector2( 0, -400 )

[node name="Info" type="RichTextLabel" parent="InfoPos"]
margin_left = -258.0
margin_top = -83.0
margin_right = 245.0
margin_bottom = 192.0
custom_fonts/normal_font = SubResource( 3 )
bbcode_enabled = true
bbcode_text = "[center]WAVE: 999[/center]
[center]POINTS: 9999[/center]
[center]LEFT: 999[/center]"
text = "WAVE: 999
POINTS: 9999
LEFT: 999"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InfoAnimationPlayer" type="AnimationPlayer" parent="."]
anims/Idle = SubResource( 4 )
anims/RESET = SubResource( 5 )

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0

[node name="Dead" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )

[node name="CombatLoop" type="AudioStreamPlayer2D" parent="."]

[node name="CombatIntro" type="AudioStreamPlayer2D" parent="."]

[connection signal="all_dead" from="." to="." method="_on_Main_all_dead"]
